@@ -1,7 +1,3 @@
-/*
- * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
- * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
- */
 package com.mycompany.tapsecure.services;
 
 import java.util.ArrayList;
@@ -10,49 +6,64 @@ import java.util.Locale;
 import java.util.MissingResourceException;
 import java.util.ResourceBundle;
 
-/**
- *
- * @author mnish
- */
 public class I18nService {
     private static ResourceBundle bundle;
     private static Locale currentLocale;
     
-    // Interface untuk mendaftarkan UI yang ingin mendengarkan perubahan bahasa
     public interface I18nChangeListener {
         void onLanguageChanged();
     }
     
-    // Daftar semua form/panel yang sedang aktif mendengarkan perubahan
     private static final List<I18nChangeListener> listeners = new ArrayList<>();
     
-    // Blok inisialisasi default agar tidak NullPointerException di awal aplikasi
     static {
-        setLocale(Locale.of("id")); 
+        currentLocale = new Locale("id");
+        loadBundle();
+    }
+    
+    private static void loadBundle() {
+        ResourceBundle.clearCache();
+        try {
+        // Coba dengan locale persis
+        bundle = ResourceBundle.getBundle("i18n.messages", currentLocale);
+        System.out.println("Bundle loaded: locale " + currentLocale);
+        } catch (MissingResourceException e1) {
+            try {
+                // Coba hanya language-nya saja (tanpa country)
+                Locale langOnly = new Locale(currentLocale.getLanguage());
+                bundle = ResourceBundle.getBundle("i18n.messages", langOnly);
+                System.out.println("Bundle loaded dengan language only: " + langOnly);
+            } catch (MissingResourceException e2) {
+                try {
+                    // Fallback ke messages.properties
+                    bundle = ResourceBundle.getBundle("i18n.messages", Locale.ROOT);
+                    System.out.println("Bundle fallback ke ROOT");
+                } catch (MissingResourceException e3) {
+                    System.err.println("WARNING: i18n bundle tidak ditemukan! " + e3.getMessage());
+                    bundle = null;
+                }
+            }
+        }
     }
     
     public static void setLocale(Locale locale) {
         currentLocale = locale;
-        // Membaca file di src/i18n/messages_xx.properties
-        bundle = ResourceBundle.getBundle("i18n.messages", currentLocale);
-        
-        // PICU PERUBAHAN: Beritahu semua UI untuk update teks mereka secara serentak
+        loadBundle();
         notifyListeners();
     }
     
     public static String get(String key) {
+        if (bundle == null) return "!" + key + "!";
         try {
             return bundle.getString(key);
         } catch (MissingResourceException | NullPointerException e) {
-            return "!" + key + "!"; 
+            return "!" + key + "!";
         }
     }
     
     public static Locale getCurrentLocale() {
-        return currentLocale;
+        return currentLocale != null ? currentLocale : new Locale("id");
     }
-
-    // --- MANAJEMEN LISTENER (OBSERVER) ---
     
     public static synchronized void registerListener(I18nChangeListener listener) {
         if (!listeners.contains(listener)) {
@@ -65,7 +76,6 @@ public class I18nService {
     }
     
     private static void notifyListeners() {
-        // Jalankan perulangan untuk mengeksekusi fungsi update di setiap form
         for (I18nChangeListener listener : listeners) {
             if (listener != null) {
                 listener.onLanguageChanged();
